--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Best Dodge Cars</title>
+</head>
+<body>
+  <h1>Best Dodge Cars</h1>
+</body>
+</html>
+<p>I am making this website to help pick which mopar you might want to choose.</p>
+<hr>
+<img></img>
+<p>This is the 2023 Dodge Challenger</p>
+<hr>
+<img></img>
+<p>This is the 2023 Grand Chereoke Trackhawk</p> 
+<hr>
+<img></img>
+<p>This is the 2023 Dode Charger</p>
