--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
   <title>Best Dodge Cars</title>
 </head>
 <body>
   <h1>Best Dodge Cars</h1>
+  <p>I am making this website to help pick which mopar you might want to choose.</p>
+  <hr>
+  <h2>This is the 2023 Dodge Challenger</h2>
+  <img src="2023ChallengerSRT.jpg">
+  <p>The 2023 dodge challenger comes with a 6.4 L V8 engine. It goes 0-60 in 3.6-6.5 seconds.</p>
+  <hr>
+  <h2>This is the 2023 Grand Chereoke Trackhawk</h3> 
+  <img src="2023trackhawk.jpg">
+  <p>The 2023 Grand Chereoke Track hawk comes with a 6.2 L V8 engine. That is 707 HP and 645 poundfeet of torque.</p>
+  <hr>
+  <h2>This is the 2023 Dodge Charger</h4>
+  <img src="2023Charger.jpg">
+  <p>The 2023 Dodge Charger is a 4 door Sedan that can go 0-60 in 3.9 - 7.1 seconds. It comes with a 6.4 L V8 engine.</p>
+  
 </body>
 </html>
-<p>I am making this website to help pick which mopar you might want to choose.</p>
-<hr>
-<img></img>
-<p>This is the 2023 Dodge Challenger</p>
-<hr>
-<img></img>
-<p>This is the 2023 Grand Chereoke Trackhawk</p> 
-<hr>
-<img></img>
-<p>This is the 2023 Dode Charger</p>
